- Added a method to get a Function interface back for a body of code.